deploy/base/openehr-nodes/vitala/openehrtool/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vitala-openehrtool
  namespace: dh-health
  labels:
    app: vitala-openehrtool
    ehr-node-name: vitala
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vitala-openehrtool
  template:
    metadata:
      labels:
        app: vitala-openehrtool
    spec:
      containers:
      - name: vitala-openehrtool
        image: surfercrs4/openehrtool:latest
        ports:
        - containerPort: 9000
