deploy/base/openehr-nodes/vitala/openehrtool/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitala-openehrtool
  namespace: dh-health
spec:
  selector:
    app: vitala-openehrtool
  ports:
  - port: 9000
    targetPort: 9000
    name: http
  type: ClusterIP
